edit the logo error

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <!-- Nav -->
       <nav class="main-nav">
-        <img src="/img/logo.png" alt="Microsoft" class="logo" />
+        <img src="img/logo.png" alt="Microsoft" class="logo" />
         <ul class="main-menu">
           <li><a href="#">Ofiice</a></li>
           <li><a href="#">Windows</a></li>
